<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderEditActivity">

    <EditText
        android:id="@+id/quantityFld"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/heightFld" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text="@string/quantityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <EditText
        android:id="@+id/heightFld"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/widthFld" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text="Height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:gravity="center|start"
        android:text="@string/orderIdLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderIdLbl"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center|end"
        android:text="000000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/clientSp"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/orderIdLbl" />

    <Spinner
        android:id="@+id/fontTypeSp"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/fontColorSp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text="@string/fontTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text="@string/backgroundColorLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Spinner
        android:id="@+id/paperTypeSp"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/clientSp" />

    <Spinner
        android:id="@+id/fontColorSp"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/bgColorSp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text="@string/fontColorLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:text="@string/paperTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="86dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center|start"
        android:text="@string/clientLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Spinner
        android:id="@+id/bgColorSp"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/paperTypeSp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center|start"
        android:text="@string/widthLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:id="@+id/widthFld"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/fontTypeSp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center|center_horizontal"
        android:text="@string/inchesLabel"
        app:layout_constraintStart_toEndOf="@+id/widthFld"
        app:layout_constraintTop_toBottomOf="@+id/fontTypeSp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal"
        android:text="@string/copiesLabel"
        app:layout_constraintStart_toEndOf="@+id/quantityFld"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal"
        android:text="@string/feetsLabel"
        app:layout_constraintStart_toEndOf="@+id/heightFld"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="69dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="28dp"
        android:gravity="center|left"
        android:text="@string/totalLabel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityFld" />

    <TextView
        android:id="@+id/totalLbl"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:gravity="center|end"
        android:text="$00000.00"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/quantityFld" />

    <TextView
        android:id="@+id/orderEditTitleLbl"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="16dp"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveOrderBtn"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="19dp"
        android:text="@string/saveButtonLabel"
        app:backgroundTint="#4CAF50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

</androidx.constraintlayout.widget.ConstraintLayout>