<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView10"
        style="@style/FieldsTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="47dp"
        android:text="@string/loggedAsLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loggedAsUserNameLabel"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="47dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@string/homeLabel"
        style="@style/ScreensTitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOrders"
        style="@style/HomeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_orders"
        android:drawableLeft="@drawable/ic_orders"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:text="@string/orders"
        app:layout_constraintBottom_toTopOf="@+id/txtClients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37"
        app:layout_constraintVertical_bias="0.32999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtClients"
        style="@style/HomeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_clients"
        android:drawableLeft="@drawable/ic_clients"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:text="@string/clients"
        app:layout_constraintBottom_toTopOf="@+id/txtProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtOrders"
        app:layout_constraintTop_toBottomOf="@+id/txtOrders" />

    <TextView
        android:id="@+id/txtProducts"
        style="@style/HomeMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/ic_products"
        android:drawableLeft="@drawable/ic_products"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:text="@string/products"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtClients"
        app:layout_constraintTop_toBottomOf="@+id/txtClients"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homeLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Log out"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>